--- a/hyprland.conf
+++ b/hyprland.conf
@@ -235,7 +235,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod shift, Q, killactive,
-bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, T, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod shift, S, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/screenshots/"Screenshot$(date +%F_%T).png"
 bind = $mainMod, space, togglefloating
