Added arabic terminal font support to display quran

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -29,7 +29,7 @@ include current-theme.conf
 
 #: Font size (in pts).
 
-# force_ltr no
+force_ltr no
 
 #: kitty does not support BIDI (bidirectional text), however, for RTL
 #: scripts, words are automatically displayed in RTL. That is to say,
@@ -47,7 +47,7 @@ include current-theme.conf
 #: to get BIDI support, because it will force kitty to always treat
 #: the text as LTR, which FriBidi expects for terminals.
 
-# symbol_map
+symbol_map U+0600-U+06FF Amiri Regular
 
 #: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
@@ -2928,3 +2928,11 @@ allow_remote_control yes
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_FONTS
+font_family      Kawkab Mono Light
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
