Fixed install script (and tested)

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -240,6 +240,8 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod shift, S, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/screenshots/"Screenshot$(date +%F_%T).png"
 bind = $mainMod, space, togglefloating
 bind = $mainMod, F, fullscreen
+bind = $mainMod, V, exec, ~/Scripts/virtual-machines
+bind = $mainMod, C, exec, ~/Scripts/clean
 bind = $mainMod shift, up, movewindow, u
 bind = $mainMod shift, right, movewindow, r
 bind = $mainMod shift, down, movewindow, d
